--- a/index.html
+++ b/index.html
@@ -22,43 +22,123 @@
 
     <div class="container-fluid">
         <div class="container">
-            <h2>CHOOSE YOUR HOUSE</h2>
+            <h2>CHOOSE YOUR CHARACTER</h2>
+            <!-- START POINT: This will be turned into a card carousel -->
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="assets/stark.jpg" class="card-img-top" alt="...">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="assets/targaryen.jpg" class="card-img-top" alt="...">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="assets/lannister.jpg" class="card-img-top" alt="...">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/assets/greyjoy.jpg" class="card-img-top" alt="...">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- Fetch name of character and display here -->
+                            <p class="card-text">Replace with name from API</p>
+                            <!-- Fetch title of character and display here -->
+                            <p class="card text">Replace with title from API</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- END POINT of card carousel -->
             </div>
             <div class="row justify-content-center">
-                <button type="button" class="btn btn-primary btn-lg">PLAY NOW</button>
+                <a class="btn btn-primary btn-lg" href="board.html">PLAY NOW</a>
             </div>
         </div>
     </div>
