Added board page and final page

--- a/board.html
+++ b/board.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/public/main-stylesheet.css">
-    <script src="/scripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/public/board-stylesheet.css">
+    <script src="scripts/board-script.js"></script>
 </head>
 <body>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">Back to Home Page</a>
+        </li>
+    </ul>
+
+    <div class="container-fluid">
+        <div class="board-tile">
+            <h2>1</h2>
+        </div>
+    </div>
 
     <footer>
         <small>Copyright © 2019 • Bryan Luis Villafuerte • Semester Project</small>
