--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/public/main-stylesheet.css">
-    <script src="/scripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/public/main-stylesheet.css">
+    <script src="scripts/index-script.js"></script>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid">
@@ -17,6 +17,8 @@
             <img class="logo" src="/assets/GoT-logo.png" alt="Game of Thrones Logo">
             <h1 class="display-4">The Quest to the Iron Throne</h1>
             <p class="lead">Conquer the Land of Westeros and race your way to take your rightful place on the Iron Throne</p>
+            <p class="lead quote">“There is ice and there is fire. Hate and love. Bitter and sweet… Winter and summer. Evil and good." She took a step toward him. "Death and life. Everywhere, opposites. Everywhere, the war."</p>
+            <p class="lead author">- George R.R. Martin</p>
         </div>
     </div>
 
@@ -138,7 +140,7 @@
                 <!-- END POINT of card carousel -->
             </div>
             <div class="row justify-content-center">
-                <a class="btn btn-primary btn-lg" href="board.html">PLAY NOW</a>
+                <a class="btn btn-primary btn-lg glow-button" href="board.html">PLAY NOW</a>
             </div>
         </div>
     </div>
