--- a/board.html
+++ b/board.html
@@ -7,7 +7,6 @@
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/public/board-stylesheet.css">
-    <script src="scripts/board-script.js"></script>
 </head>
 <body>
     <ul class="nav">
@@ -17,16 +16,19 @@
     </ul>
 
     <div class="container-fluid">
-        <div class="board-tile">
-            <h2>1</h2>
-        </div>
+        <h1>Conquer Westeros and reach the Iron Throne!</h1>
+        <div id="boardContainer1"></div>
+        <div id="boardContainer2"></div>
+        <div id="boardContainer3"></div>
+        <div id="boardContainer4"></div>
+        <div id="boardContainer5"></div>
     </div>
 
     <footer>
         <small>Copyright © 2019 • Bryan Luis Villafuerte • Semester Project</small>
     </footer>
     
-
+    <script src="scripts/board-script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
