--- a/board.html
+++ b/board.html
@@ -7,22 +7,47 @@
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/public/board-stylesheet.css">
+    <script src="https://kit.fontawesome.com/6f910e69ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" href="index.html">Back to Home Page</a>
+            <a class="nav-link active" href="index.html"><i class="fas fa-arrow-circle-left"></i> Back to Home Page</a>
         </li>
     </ul>
 
     <div class="container-fluid">
         <h1>Conquer Westeros and reach the Iron Throne!</h1>
+
+        <!-- BOARD -->
         <div id="boardContainer1"></div>
         <div id="boardContainer2"></div>
         <div id="boardContainer3"></div>
         <div id="boardContainer4"></div>
         <div id="boardContainer5"></div>
+
+        <!-- CHARACTER TOKEN -->
+        <div id="characterToken"></div>
+
+        <!-- DICE ROLLER -->
+        <div id="diceRoller">
+            <div class="row justify-content-center">
+                <div class="diceContainer">
+                    <!-- will be replaced after rolling dice -->
+                    <p>2</p>
+                </div>
+                <div class="diceContainer">
+                    <!-- will be replaced after rolling dice -->
+                    <p>4</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <button class="btn btn-primary btn-lg glow-button">Roll Dice!</button>
+            </div>
+        </div>
     </div>
+
+
 
     <footer>
         <small>Copyright © 2019 • Bryan Luis Villafuerte • Semester Project</small>
