--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/public/main-stylesheet.css">
     <script src="scripts/index-script.js"></script>
+    <script src="https://kit.fontawesome.com/6f910e69ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid">
@@ -34,7 +35,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -45,7 +46,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -56,7 +57,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +68,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -100,7 +101,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +112,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +123,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +134,7 @@
                             <!-- Fetch name of character and display here -->
                             <p class="card-text">Replace with name from API</p>
                             <!-- Fetch title of character and display here -->
-                            <p class="card text">Replace with title from API</p>
+                            <p class="card-text">Replace with title from API</p>
                         </div>
                     </div>
                 </div>
