--- a/final.html
+++ b/final.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/public/main-stylesheet.css">
+    <link rel="stylesheet" href="/stylesheets/public/final-stylesheet.css">
     <script src="https://kit.fontawesome.com/6f910e69ab.js" crossorigin="anonymous"></script>
-    <script src="/scripts/script.js"></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <h1>Congratulations!</h1>
+    </div>
 
     <footer>
         <small>Copyright © 2019 • Bryan Luis Villafuerte • Semester Project</small>
