minor tweaks and added assets

--- a/board.html
+++ b/board.html
@@ -27,7 +27,10 @@
         <div id="boardContainer5"></div>
 
         <!-- CHARACTER TOKEN -->
-        <div id="characterToken"></div>
+        <div id="characterToken">
+            <!-- Load corresponding image according to selected character -->
+            <img src="/assets/token-jon-snow.png" alt="Jon Snow">
+        </div>
 
         <!-- DICE ROLLER -->
         <div id="diceRoller">
