--- a/final.html
+++ b/final.html
@@ -11,15 +11,18 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="col-sm-8"></div>
-        <div class="col-sm-4">
-            <h1>Congratulations!</h1>
-            <div>
-                <p class="lead">Power resides where men believeit resides. It's a trick, a shadowon the wall and a very small mancan cast a very large shadow.<br><br><br></b>- Lord Varys "The Spider"</p>
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <h1>Congratulations!</h1>
+                <div>
+                    <p class="lead">Power resides where men believeit resides. It's a trick, a shadowon the wall and a very small mancan cast a very large shadow.<br><br><br></b>- Lord Varys "The Spider"</p>
+                </div>
+                <a class="btn btn-primary btn-lg glow-button" href="index.html">PLAY AGAIN?</a>
             </div>
-            <div class="row justify-content-center">
-                <a class="btn btn-primary btn-lg glow-button" href="board.html">PLAY AGAIN?</a>
-            </div>
+        </div>
+        <div class="row justify-content-center">
+            
         </div>
     </div>
 
