--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>GoT Board Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/public/main-stylesheet.css">
-    <script src="scripts/index-script.js"></script>
     <script src="https://kit.fontawesome.com/6f910e69ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid">
         <!-- Credits to HBO's Game of Thrones Youtube Channel for the video at https://youtu.be/TZE9gVF1QbA -->
-        <video id="GotCredits" autoplay muted loop poster="https://dummyimage.com/900x400/000/fff" src="assets/Opening Credits _ Game of Thrones _ Season 8 (HBO).mp4" type="video/mp4"></video>
+<!--        <video id="GotCredits" autoplay muted loop poster="https://dummyimage.com/900x400/000/fff" src="assets/Opening Credits _ Game of Thrones _ Season 8 (HBO).mp4" type="video/mp4"></video>-->
         <div class="container">
             <img class="logo" src="/assets/GoT-logo.png" alt="Game of Thrones Logo">
             <h1 class="display-4">The Quest to the Iron Throne</h1>
@@ -27,121 +26,11 @@
         <div class="container">
             <h2>CHOOSE YOUR CHARACTER</h2>
             <!-- START POINT: This will be turned into a card carousel -->
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="assets/placeholder-400-600.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <!-- Fetch name of character and display here -->
-                            <p class="card-text">Replace with name from API</p>
-                            <!-- Fetch title of character and display here -->
-                            <p class="card-text">Replace with title from API</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="charactersRow">
                 <!-- END POINT of card carousel -->
             </div>
             <div class="row justify-content-center">
-                <a class="btn btn-primary btn-lg glow-button" href="board.html">PLAY NOW</a>
+                <a class="btn btn-primary btn-lg glow-button" id="playnow">PLAY NOW</a>
             </div>
         </div>
     </div>
@@ -155,6 +44,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
+    <script src="scripts/storage.js" type="text/javascript"></script>
+    <script src="scripts/utils.js" type="text/javascript"></script>
     <script src="scripts/index-script.js"></script>
+
 </body>
 </html>
