--- a/board.html
+++ b/board.html
@@ -26,23 +26,26 @@
         <div id="boardContainer4"></div>
         <div id="boardContainer5"></div>
 
-        <!-- CHARACTER TOKEN -->
-        <div id="characterToken">
-            <!-- Load corresponding image according to selected character -->
-            <img src="/assets/token-jon-snow.png" alt="Jon Snow">
-        </div>
-
         <!-- DICE ROLLER -->
         <div id="diceRoller">
             <div class="row justify-content-center">
                 <div class="diceContainer">
                     <!-- will be replaced after rolling dice -->
-                    <p>4</p>
+                    <p id="diceNumber">4</p>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <button class="btn btn-primary btn-lg glow-button">Roll Dice!</button>
+                <p class="lead" id="diceAlert"></p>
             </div>
+            <div class="row justify-content-center">
+                <button class="btn btn-primary btn-lg glow-button" id="rollerButton">Roll Dice!</button>
+            </div>
+        </div>
+
+        <!-- CHARACTER TOKEN -->
+        <div id="characterToken">
+            <!-- Load corresponding image according to selected character -->
+            <img src="/assets/token-jon-snow.png" alt="Jon Snow">
         </div>
     </div>
 
