--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container-fluid">
-        <div class="container">
+        <div class="container-fluid characters">
             <h2>CHOOSE YOUR CHARACTER</h2>
             <!-- START POINT: This will be turned into a card carousel -->
             <div class="row" id="charactersRow">
