-added logic to move character in board tile.

--- a/board.html
+++ b/board.html
@@ -31,7 +31,7 @@
             <div class="row justify-content-center">
                 <div class="diceContainer">
                     <!-- will be replaced after rolling dice -->
-                    <p id="diceNumber">4</p>
+                    <p id="diceNumber"></p>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -45,7 +45,7 @@
         <!-- CHARACTER TOKEN -->
         <div id="characterToken">
             <!-- Load corresponding image according to selected character -->
-            <img src="/assets/token-jon-snow.png" alt="Jon Snow">
+<!--            <img src="/assets/token-jon-snow.png" alt="Jon Snow">-->
         </div>
     </div>
 
@@ -55,9 +55,15 @@
         <small>Copyright © 2019 • Bryan Luis Villafuerte • Semester Project</small>
     </footer>
     
-    <script src="scripts/board-script.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+
+
+    <script src="scripts/storage.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/board-script.js" type="text/javascript"></script>
+
 </body>
 </html>
