minor tweaks to style in final.html

--- a/board.html
+++ b/board.html
@@ -29,6 +29,8 @@
         <!-- DICE ROLLER -->
         <div id="diceRoller">
             <div class="row justify-content-center">
+                <!-- CHARACTER TOKEN -->
+                <div id="characterToken"></div>
                 <div class="diceContainer">
                     <!-- will be replaced after rolling dice -->
                     <p id="diceNumber"></p>
@@ -40,12 +42,6 @@
             <div class="row justify-content-center">
                 <button class="btn btn-primary btn-lg glow-button" id="rollerButton">Roll Dice!</button>
             </div>
-        </div>
-
-        <!-- CHARACTER TOKEN -->
-        <div id="characterToken">
-            <!-- Load corresponding image according to selected character -->
-<!--            <img src="/assets/token-jon-snow.png" alt="Jon Snow">-->
         </div>
     </div>
 
