--- a/final.html
+++ b/final.html
@@ -15,6 +15,7 @@
             <div class="col-md-6"></div>
             <div class="col-md-6">
                 <h1>Congratulations!</h1>
+                <h4>You just finished your quest. You are now sitting in the Iron Throne and rule the 7 kingdoms.</h4>
                 <div>
                     <p class="lead">Power resides where men believeit resides. It's a trick, a shadowon the wall and a very small mancan cast a very large shadow.<br><br><br></b>- Lord Varys "The Spider"</p>
                 </div>
