minor tweaks to alerts and turned on sound for video

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <!-- Credits to HBO's Game of Thrones Youtube Channel for the video at https://youtu.be/TZE9gVF1QbA -->
-<!--        <video id="GotCredits" autoplay muted loop poster="https://dummyimage.com/900x400/000/fff" src="assets/Opening Credits _ Game of Thrones _ Season 8 (HBO).mp4" type="video/mp4"></video>-->
+        <video id="GotCredits" autoplay loop poster="https://dummyimage.com/900x400/000/fff" src="assets/OpeningCredits_GameofThrones_Season8(HBO).mp4" type="video/mp4"></video>
         <div class="container">
             <img class="logo" src="/assets/GoT-logo.png" alt="Game of Thrones Logo">
             <h1 class="display-4">The Quest to the Iron Throne</h1>
